# mini-project6

./: README.md
serverless_rust_microservice/: Cargo.toml  Dockerfile
serverless_rust_microservice/src/: main.rs
